--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="ghost-orchid.css" />
+	<link rel="stylesheet" href="ghost-orcid.css" />
 	<title>Ghost Orcid</title>
 </head>
 
